--- a/index.html
+++ b/index.html
@@ -1,7 +1,2 @@
-rfhqiljvbkqjrgo;chreqlih' wdqver
-qfebgutghvpuewfh  qliebvqe[ucbwrg]vqe
-tbefb9udanbpehb [0
-
-
-
-KEK
+<h1> Somethimg &amp; Co </h1>
+<p> Hello, this is Something &amp; Co, my website </p>
