--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1> Somethimg &amp; Co </h1>
-<p> Hello, this is Something &amp; Co, my website </p>
+<p> Hello, this is <strong><em> Something &amp; Co </strong></em>, my website </p>
