--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1> Somethimg &amp; Co </h1>
-<p> Hello, this is <strong><em> Something &amp; Co </strong></em>, my website </p>
+<p> Hello, this is <strong><em> Something &amp; Co </em></strong>
+  , my website </p>
