--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1> Somethimg &amp; Co </h1>
 <p> Hello, this is <strong><em> Something &amp; Co </em></strong>
   , my website </p>
+<img src="http://www.somethinghauntingyou.com/assets/images/site-logo-A.png">
